Version 0.9.4 -

- Move RenderGroup refresh to UpdateData
- Add Tree Snapping legacy type converter


Version 0.9.3 -

- Add option to ignore Tree Anarchy mod data
- Automatically read and convert Unlimited Trees mod data
- Streamline post-load RenderGroup refresh process


Verson 0.9.2 -

- Automatically read and convert Tree Anarchy data
- Revise overlap detection handling
- Update AlgernonCommons


Version 0.9.1 -

- Adjust overlap detection handling